--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "vite": "^7.0.5"
   }
